Prevented crashing on clicking disabled buttons